--- a/tutorial.html
+++ b/tutorial.html
@@ -6,7 +6,7 @@
 <body>
 
 <h2>This is a Heading</h2>
-<h3>This is a paragraph.</h3>
+<p>This is a <br> paragraph with a line break.</p>
 
 </body>
 </html>
